@@ -9,9 +9,6 @@ To be addressed in 7.19.5 (planned release: May 2009)
 
 228 - rpath problems in linking with custom openssl
 
-233 - [PATCH] Allow Curl test suite test #251 to work if client and server 
-      are on different machines
-
 234 - [PATCH] Allow various Curl test suite tests to work on non-ASCII 
       platforms
 
