@@ -14,6 +14,10 @@ Yang Tse (4 May 2009)
   the protocol portions are mangled from CRLF to CRCRLF if data->set.crlf or
   data->set.prefer_ascii are set (depending on CURL_DO_LINEEND_CONV).
 
+- Applied David McCreedy's patch to fix test suite harness to allow test FTP
+  server and client on different machines, providing FTP client address when
+  running the FTP test server.
+
 Daniel Fandrich (3 May 2009)
 - Added and disabled test case 563 which shows KNOWN_BUGS #59.  The bug
   report failed to mention that a proxy must be used to reproduce it.
